@@ -9,9 +9,9 @@ package com.hedera.services.store.contracts.precompile;
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -20,117 +20,283 @@ package com.hedera.services.store.contracts.precompile;
  * ‍
  */
 
-import com.google.common.primitives.Longs;
+import com.esaulpaugh.headlong.abi.Function;
+import com.esaulpaugh.headlong.abi.Tuple;
 import com.google.protobuf.ByteString;
+import com.hedera.services.utils.EntityIdUtils;
+import com.hederahashgraph.api.proto.java.AccountID;
+import com.hederahashgraph.api.proto.java.TokenID;
 import org.apache.tuweni.bytes.Bytes;
 import org.hyperledger.besu.datatypes.Address;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
-import java.math.BigInteger;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-
-import static com.hedera.services.utils.EntityIdUtils.accountParsedFromSolidityAddress;
-import static com.hedera.services.utils.EntityIdUtils.tokenParsedFromSolidityAddress;
+import java.util.stream.Collectors;
 
 @Singleton
 public class DecodingFacade {
-	private static final int LONG_LENGTH = 8;
 	private static final int ADDRESS_BYTES_LENGTH = 20;
 	private static final int ADDRESS_SKIP_BYTES_LENGTH = 12;
 	private static final int FUNCTION_SELECTOR_BYTES_LENGTH = 4;
+
+	private static final Function CRYPTO_TRANSFER_FUNCTION = new Function("cryptoTransfer((bytes32,(bytes32,int64)[],(bytes32,bytes32,int64)[])[])",
+			"((bytes32,(bytes32,int64)[],(bytes32,bytes32,int64)[])[])");
+	private static final Function TRANSFER_TOKENS_FUNCTION = new Function("transferTokens(address,address[],int64[])",
+			"(bytes32,bytes32[],int64[])");
+	private static final Function TRANSFER_TOKEN_FUNCTION = new Function("transferToken(address,address,address,int64)",
+			"(bytes32,bytes32,bytes32,int64)");
+	private static final Function TRANSFER_NFTS_FUNCTION = new Function("transferNFTs(address,address[],address[],int64[])",
+			"(bytes32,bytes32[],bytes32[],int64[])");
+	private static final Function TRANSFER_NFT_FUNCTION = new Function("transferNFT(address,address,address,int64)",
+			"(bytes32,bytes32,bytes32,int64)");
+	private static final Function MINT_TOKEN_FUNCTION = new Function("mintToken(address,uint64,bytes)",
+			"(bytes32,int64,string)");
+	private static final Function BURN_TOKEN_FUNCTION = new Function("burnToken(address,uint64,int64[])",
+			"(bytes32,int64,int64[])");
+	private static final Function ASSOCIATE_TOKENS_FUNCTION = new Function("associateTokens(address,address[])",
+			"(bytes32,bytes32[])");
+	private static final Function ASSOCIATE_TOKEN_FUNCTION = new Function("associateToken(address,address)",
+			"(bytes32,bytes32)");
+	private static final Function DISSOCIATE_TOKENS_FUNCTION = new Function("dissociateTokens(address,address[])",
+			"(bytes32,bytes32[])");
+	private static final Function DISSOCIATE_TOKEN_FUNCTION = new Function("associateToken(address,address)",
+			"(bytes32,bytes32)");
 
 	@Inject
 	public DecodingFacade() {
 	}
 
-	/* NOT A REAL IMPLEMENTATION */
+	public SyntheticTxnFactory.TokenTransferLists decodeCryptoTransfer(final Bytes input) {
+		final Tuple decodedTuples =
+				CRYPTO_TRANSFER_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final List<SyntheticTxnFactory.NftExchange> nftExchanges = new ArrayList<>();
+		final List<SyntheticTxnFactory.HbarTransfer> hbarTransfers = new ArrayList<>();
+		final List<SyntheticTxnFactory.FungibleTokenTransfer> fungibleTransfers = new ArrayList<>();
+		for(final var tuple: decodedTuples) {
+			for(final var tupleNested: (Tuple[]) tuple) {
+				final var tokenType = convertAddressBytesToTokenID((byte[]) tupleNested.get(0));
+
+				final var transfers = (Tuple[]) tupleNested.get(1);
+				for (final var transfer : transfers) {
+					final AccountID accountID = convertAddressBytesToAccountID((byte[]) transfer.get(0));
+					final long amount = (long) transfer.get(1);
+					fillFungibleTransferLists(hbarTransfers, fungibleTransfers, tokenType, accountID, amount);
+				}
+
+				final var nftTransfersDecoded = (Tuple[]) tupleNested.get(2);
+				for(final var nftTransferDecoded: nftTransfersDecoded) {
+					nftExchanges.add(new SyntheticTxnFactory.NftExchange((long) nftTransferDecoded.get(2),
+							tokenType, convertAddressBytesToAccountID((byte[]) nftTransferDecoded.get(0)),
+							convertAddressBytesToAccountID((byte[]) nftTransferDecoded.get(1))));
+				}
+			}
+		}
+
+		return new SyntheticTxnFactory.TokenTransferLists(nftExchanges, hbarTransfers, fungibleTransfers);
+	}
+
 	public SyntheticTxnFactory.BurnWrapper decodeBurn(final Bytes input) {
-		final var tokenAddress = Address.wrap(input.slice(
-				ADDRESS_SKIP_BYTES_LENGTH + FUNCTION_SELECTOR_BYTES_LENGTH,
-				ADDRESS_BYTES_LENGTH));
-		final var fungibleAmount = Longs.fromByteArray(input.slice(
-				ADDRESS_SKIP_BYTES_LENGTH + FUNCTION_SELECTOR_BYTES_LENGTH + ADDRESS_BYTES_LENGTH,
-				LONG_LENGTH).toArrayUnsafe());
+		final Tuple decodedArguments =
+				BURN_TOKEN_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(0));
+		final var fungibleAmount = (long) decodedArguments.get(1);
+		final var serialNumbers = (long[]) decodedArguments.get(2);
 
 		if (fungibleAmount > 0) {
 			return SyntheticTxnFactory.BurnWrapper.forFungible(
-					tokenParsedFromSolidityAddress(tokenAddress), fungibleAmount);
+					tokenID, fungibleAmount);
 		} else {
 			return SyntheticTxnFactory.BurnWrapper.forNonFungible(
-					tokenParsedFromSolidityAddress(tokenAddress), List.of(1L));
+					tokenID, Arrays.stream(serialNumbers).boxed().collect(Collectors.toList()));
 		}
 	}
 
-	/* NOT A REAL IMPLEMENTATION */
 	public SyntheticTxnFactory.MintWrapper decodeMint(final Bytes input) {
-		final var tokenAddress = Address.wrap(input.slice(
-						ADDRESS_SKIP_BYTES_LENGTH + FUNCTION_SELECTOR_BYTES_LENGTH,
-						ADDRESS_BYTES_LENGTH));
-		final var fungibleAmount = Longs.fromByteArray(input.slice(
-						ADDRESS_SKIP_BYTES_LENGTH + FUNCTION_SELECTOR_BYTES_LENGTH + ADDRESS_BYTES_LENGTH + 24,
-						LONG_LENGTH).toArrayUnsafe());
+		final Tuple decodedArguments =
+				MINT_TOKEN_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(0));
+		final var fungibleAmount = (long) decodedArguments.get(1);
+		final var metadata = String.valueOf(decodedArguments.get(2));
 
 		if (fungibleAmount > 0) {
 			return SyntheticTxnFactory.MintWrapper.forFungible(
-					tokenParsedFromSolidityAddress(tokenAddress), fungibleAmount);
+					tokenID, fungibleAmount);
 		} else {
 			return SyntheticTxnFactory.MintWrapper.forNonFungible(
-					tokenParsedFromSolidityAddress(tokenAddress), List.of(ByteString.copyFromUtf8("Hello World!")));
+					tokenID, Collections.singletonList(ByteString.copyFrom(metadata.getBytes())));
 		}
 	}
 
-	/* NOT A REAL IMPLEMENTATION */
+	public SyntheticTxnFactory.TokenTransferLists decodeTransferToken(final Bytes input) {
+		final Tuple decodedArguments =
+				TRANSFER_TOKEN_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(0));
+		final var sender = convertAddressBytesToAccountID((byte[]) decodedArguments.get(1));
+		final var receiver = convertAddressBytesToAccountID((byte[]) decodedArguments.get(2));
+		final var amount = (long) decodedArguments.get(3);
+
+		return new SyntheticTxnFactory.TokenTransferLists(new ArrayList<>(), new ArrayList<>(), List.of(new SyntheticTxnFactory.FungibleTokenTransfer(
+				amount, tokenID,
+				sender, receiver)));
+	}
+
+	public SyntheticTxnFactory.TokenTransferLists decodeTransferTokens(final Bytes input) {
+		final Tuple decodedArguments =
+				TRANSFER_TOKENS_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final var tokenType = convertAddressBytesToTokenID((byte[]) decodedArguments.get(0));
+		final var accountIDs = decodeAccountIDsFromBytesArray((byte[][]) decodedArguments.get(1));
+		final var amounts = (long[]) decodedArguments.get(2);
+
+		final List<SyntheticTxnFactory.HbarTransfer> hbarTransfers = new ArrayList<>();
+		final List<SyntheticTxnFactory.FungibleTokenTransfer> fungibleTransfers = new ArrayList<>();
+		for(int i=0;i<accountIDs.size();i++) {
+			final var accountID = accountIDs.get(i);
+			final var amount = amounts[i];
+
+			fillFungibleTransferLists(hbarTransfers, fungibleTransfers, tokenType, accountID, amount);
+		}
+
+		return new SyntheticTxnFactory.TokenTransferLists(new ArrayList<>(), hbarTransfers, fungibleTransfers);
+	}
+
+	public SyntheticTxnFactory.TokenTransferLists decodeTransferNFT(final Bytes input) {
+		final Tuple decodedArguments =
+				TRANSFER_NFT_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(0));
+		final var sender = convertAddressBytesToAccountID((byte[]) decodedArguments.get(1));
+		final var receiver = convertAddressBytesToAccountID((byte[]) decodedArguments.get(2));
+		final var serialNumber = (long) decodedArguments.get(3);
+
+		return new SyntheticTxnFactory.TokenTransferLists(List.of(new SyntheticTxnFactory.NftExchange(
+				serialNumber, tokenID,
+				sender, receiver)), new ArrayList<>(), new ArrayList<>());
+	}
+
+	public SyntheticTxnFactory.TokenTransferLists decodeTransferNFTs(final Bytes input) {
+		final Tuple decodedArguments =
+				TRANSFER_NFTS_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(0));
+		final var senders = decodeAccountIDsFromBytesArray((byte[][]) decodedArguments.get(1));
+		final var receivers = decodeAccountIDsFromBytesArray((byte[][]) decodedArguments.get(2));
+		final var serialNumbers = ((long[]) decodedArguments.get(3));
+
+		final List<SyntheticTxnFactory.NftExchange> nftExchanges = new ArrayList<>();
+		for(var i = 0; i < senders.size(); i++) {
+			final var nftExchange = new SyntheticTxnFactory.NftExchange(
+					serialNumbers[i], tokenID,
+					senders.get(i), receivers.get(i));
+			nftExchanges.add(nftExchange);
+		}
+
+		return new SyntheticTxnFactory.TokenTransferLists(nftExchanges, new ArrayList<>(), new ArrayList<>());
+	}
+
 	public SyntheticTxnFactory.Association decodeAssociation(final Bytes input) {
-		Address accountAddress = Address.wrap(input.slice(16, 20));
-		Address tokenAddress = Address.wrap(input.slice(48, 20));
+		final Tuple decodedArguments =
+				ASSOCIATE_TOKEN_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final var accountID = convertAddressBytesToAccountID((byte[]) decodedArguments.get(0));
+		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(1));
 
 		return SyntheticTxnFactory.Association.singleAssociation(
-				accountParsedFromSolidityAddress(accountAddress),
-				tokenParsedFromSolidityAddress(tokenAddress));
+				accountID, tokenID);
 	}
 
-	/* NOT A REAL IMPLEMENTATION */
 	public SyntheticTxnFactory.Association decodeMultipleAssociations(final Bytes input) {
-		Address accountAddress = Address.wrap(input.slice(16, 20));
-		Address tokenAddress = Address.wrap(input.slice(48, 20));
+		final Tuple decodedArguments =
+				ASSOCIATE_TOKENS_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final var accountID = convertAddressBytesToAccountID((byte[]) decodedArguments.get(0));
+		final var tokenIDs = decodeTokenIDsFromBytesArray((byte[][]) decodedArguments.get(1));
 
 		return SyntheticTxnFactory.Association.multiAssociation(
-				accountParsedFromSolidityAddress(accountAddress),
-				List.of(tokenParsedFromSolidityAddress(tokenAddress)));
+				accountID, tokenIDs);
 	}
 
-	/* NOT A REAL IMPLEMENTATION */
 	public SyntheticTxnFactory.Dissociation decodeDissociate(final Bytes input) {
-		Address accountAddress = Address.wrap(input.slice(16, 20));
-		Address tokenAddress = Address.wrap(input.slice(48, 20));
+		final Tuple decodedArguments =
+				DISSOCIATE_TOKEN_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final var accountID = convertAddressBytesToAccountID((byte[]) decodedArguments.get(0));
+		final var tokenID = convertAddressBytesToTokenID((byte[]) decodedArguments.get(1));
 
 		return SyntheticTxnFactory.Dissociation.singleDissociation(
-				accountParsedFromSolidityAddress(accountAddress),
-				tokenParsedFromSolidityAddress(tokenAddress));
+				accountID, tokenID);
 	}
 
-	/* NOT A REAL IMPLEMENTATION */
 	public SyntheticTxnFactory.Dissociation decodeMultipleDissociations(final Bytes input) {
-		Address accountAddress = Address.wrap(input.slice(16, 20));
-		Address tokenAddress = Address.wrap(input.slice(48, 20));
+		final Tuple decodedArguments =
+				DISSOCIATE_TOKENS_FUNCTION.getOutputs().decode(input.slice(FUNCTION_SELECTOR_BYTES_LENGTH,
+						input.size() - FUNCTION_SELECTOR_BYTES_LENGTH).toArray());
+
+		final var accountID = convertAddressBytesToAccountID((byte[]) decodedArguments.get(0));
+		final var tokenIDs = decodeTokenIDsFromBytesArray((byte[][]) decodedArguments.get(1));
 
 		return SyntheticTxnFactory.Dissociation.multiDissociation(
-				accountParsedFromSolidityAddress(accountAddress),
-				List.of(tokenParsedFromSolidityAddress(tokenAddress)));
+					accountID, tokenIDs);
 	}
 
-	/* NOT A REAL IMPLEMENTATION */
-	public SyntheticTxnFactory.FungibleTokenTransfer decodeTransferToken(final Bytes input) {
-		final var tokenAddress = Address.wrap(input.slice(16, 20));
-		final var fromAddress = Address.wrap(input.slice(48, 20));
-		final var toAddress = Address.wrap(input.slice(80, 20));
-		final BigInteger amount = input.slice(100, 32).toBigInteger();
+	private static List<AccountID> decodeAccountIDsFromBytesArray(final byte[][] accountBytesArray) {
+		final List<AccountID> accountIDs = new ArrayList<>();
+		for(final var account: accountBytesArray) {
+			accountIDs.add(convertAddressBytesToAccountID(account));
+		}
+		return accountIDs;
+	}
 
-		return new SyntheticTxnFactory.FungibleTokenTransfer(
-				amount.longValue(),
-				tokenParsedFromSolidityAddress(tokenAddress),
-				accountParsedFromSolidityAddress(fromAddress),
-				accountParsedFromSolidityAddress(toAddress));
+	private static List<TokenID> decodeTokenIDsFromBytesArray(final byte[][] accountBytesArray) {
+		final List<TokenID> accountIDs = new ArrayList<>();
+		for(final var account: accountBytesArray) {
+			accountIDs.add(convertAddressBytesToTokenID(account));
+		}
+		return accountIDs;
+	}
+
+	private static AccountID convertAddressBytesToAccountID(final byte[] addressBytes) {
+		final var address = Address.wrap(Bytes.wrap(addressBytes).slice(ADDRESS_SKIP_BYTES_LENGTH, ADDRESS_BYTES_LENGTH));
+		return EntityIdUtils.accountParsedFromSolidityAddress(address.toArray());
+	}
+
+	private static TokenID convertAddressBytesToTokenID(final byte[] addressBytes) {
+		final var address = Address.wrap(Bytes.wrap(addressBytes).slice(ADDRESS_SKIP_BYTES_LENGTH, ADDRESS_BYTES_LENGTH));
+		return EntityIdUtils.tokenParsedFromSolidityAddress(address.toArray());
+	}
+
+	private void fillFungibleTransferLists(
+										   final List<SyntheticTxnFactory.HbarTransfer> hbarTransfers,
+										   final List<SyntheticTxnFactory.FungibleTokenTransfer> fungibleTransfers,
+										   final TokenID tokenType, final AccountID accountID, final long amount) {
+			if (amount > 0) {
+				fungibleTransfers.add(new SyntheticTxnFactory.FungibleTokenTransfer(amount, tokenType, null,
+						accountID));
+				hbarTransfers.add(new SyntheticTxnFactory.HbarTransfer(amount, null,
+						accountID));
+			} else {
+				fungibleTransfers.add(new SyntheticTxnFactory.FungibleTokenTransfer(amount, tokenType, accountID,
+						null));
+				hbarTransfers.add(new SyntheticTxnFactory.HbarTransfer(amount, accountID,
+						null));
+			}
 	}
 }
